--- a/home.html
+++ b/home.html
@@ -8,13 +8,24 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="animate.min.css">
+    <script src="jquery-1.12.2.min.js"></script>
+    <script src="jquery.lettering.js"></script>
+    <script src="jquery.textillate.js"></script>
 </head>
 <body>
 
 <div class="jumbotron">
   <div class="container text-center">
-    <h1>Sunrise fast food cafe </h1>      
+    <h1 class="tilt">Sunrise fast food cafe </h1>      
     <p>you order it we got it</p>
+      <script>
+      $('.tilt').textillate({
+          in: {effect: 'rollIn', delay:100},
+          out: {effect: 'rollOut'},
+          loop: true
+      });
+      </script>
   </div>
 </div>
 
