--- a/home.html
+++ b/home.html
@@ -17,15 +17,16 @@
 
 <div class="jumbotron">
   <div class="container text-center">
-    <h1 class="tilt">Sunrise fast food cafe </h1>      
+    <h1 class="tilt">Polish cafe </h1>      
     <p>you order it we got it</p>
       <script>
       $('.tilt').textillate({
           in: {effect: 'rollIn', delay:100},
-          out: {effect: 'rollOut'},
-          loop: true
+          out: {effect: 'rollOut', ddelay:100},
+          loop: true,
       });
       </script>
+      
   </div>
 </div>
 
