--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 
 <div class="jumbotron">
   <div class="container text-center">
-    <h1 class="tilt">Polish cafe </h1>      
+    <h1 class="tilt">Polish fast food cafe </h1>      
     <p>you order it we got it</p>
       <script>
       $('.tilt').textillate({
@@ -44,7 +44,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">MENU</a></li>
         <li><a href="#">Contact</a></li>
-        <li><a href="#">about</a></li>
+        <li><a href="#about">about</a></li>
         <li><a href="#">Find us</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -106,6 +106,39 @@
     </div>
   </div>
 </div><br><br>
+    
+    <div id="page1">
+  <a id="about" class="smooth"></a>
+        
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="#">Logo</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">MENU</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#about">about</a></li>
+        <li><a href="#">Find us</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Your Account</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<div class="div1"> <p><img src="pics/cookie.jpg">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.</p>
+        </div>
+            </div>
+</div>
 
 <footer class="container-fluid text-center">
   <p>Sunrise fast cafe Copyright</p>  
