--- a/home.html
+++ b/home.html
@@ -139,7 +139,23 @@
         </div>
             </div>
 </div>
-
+      <div id="page2">
+  <a id="about" class="smooth"></a>
+<div class="div1"> <form class="center" action="muchuikelvin423@gmail.com" method="post" enctype="text/plain" style="algin: center">
+    <h1>contact us</h1>
+            first name<br>
+<input type="text" name="name" value="your name"><br>
+Surname:<br>
+<input type="text" name="name" value="your name"><br>
+E-mail:<br>
+<input type="text" name="mail" value="your email"><br>
+Comment:<br>
+<input type="text" name="comment" value="your comment" size="50"><br><br>
+<input type="submit" value="Send">
+<input type="reset" value="Reset">
+</form>
+        </div>
+            </div>
 <footer class="container-fluid text-center">
   <p>Sunrise fast cafe Copyright</p>  
   <form class="form-inline">Get deals:
