--- a/home.html
+++ b/home.html
@@ -123,7 +123,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">MENU</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#contact">Contact</a></li>
         <li><a href="#about">about</a></li>
         <li><a href="#">Find us</a></li>
       </ul>
@@ -140,8 +140,8 @@
             </div>
 </div>
       <div id="page2">
-  <a id="about" class="smooth"></a>
-<div class="div1"> <form class="center" action="muchuikelvin423@gmail.com" method="post" enctype="text/plain" style="algin: center">
+  <a id="contact" class="smooth"></a>
+<div class="div3"> <form class="center" action="muchuikelvin423@gmail.com" method="post" enctype="text/plain" style="algin: center">
     <h1>contact us</h1>
             first name<br>
 <input type="text" name="name" value="your name"><br>
